<!--
 ! Excerpted from "Kotlin and Android Development featuring Jetpack",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material,
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose.
 ! Visit http://www.pragmaticprogrammer.com/titles/mfjetpack for more book information.
-->
<resources>
    <string name="app_name">Penny Drop</string>
    <string name="players">Players</string>
    <string name="game">Game</string>
    <string name="player_name">Player Name</string>
    <string name="roll">Roll</string>
    <string name="or">OR</string>
    <string name="pass">Pass</string>
    <string name="cur_player">Current Player</string>
    <string name="coin_icon">Coin Icon</string>
    <string name="coins_left">coin(s) left</string>
    <string name="na">N/A</string>
    <string name="game_has_ended">The game has ended.  Would you like to play again?</string>
    <string name="new_game">New Game?</string>
    <string name="player_type_image">Player Type Image</string>
    <string name="rankings">Rankings</string>
    <string name="games_played">games played</string>
    <string name="fast_ai">Fast AI</string>
    <string name="fast_ai_summary">AI turns will be much faster.</string>
    <string name="app_theme">App Theme</string>
    <string name="starting_penny_count">Starting Penny Count</string>
    <string name="settings">Settings</string>
    <string name="play_game_button">Play Game Button</string>
    <string name="penny_drop_created_by">The <i>Penny Drop</i> app was created by Michael Fazio for the Pragmatic Bookshelf title <a href="https://pragprog.com/titles/mfjetpack/">"Kotlin Development for Android with Jetpack"</a>.</string>
    <string name="penny_drop_description">Start <b>building</b> modern, high-quality Android apps by working through two projects (including Penny Drop!) that use Kotlin and the Jetpack suite of libraries, tools, and practices.</string>
    <string name="penny_drop_icons">The coin and six-sided die icons are from the Material Design Icons collection.</string>
    <string name="dice_icon">Dice Icon</string>
    <string name="starting_penny_count_new_game">This only takes effect on a new game.</string>
    <string name="about_app_summary">Overview, dev info, and icon attribution</string>
    <string name="theme_mode">Theme Mode (Light/Dark)</string>
    <string name="about_penny_drop">About Penny Drop</string>
    <string name="penny_drop">Penny Drop</string>
    <string name="pick_players">Pick Players</string>
</resources>
